# py-flask-bootcamp-clinic-backend

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  run.py
app/: __init__.py
app/admin/: admin_routes.py
app/admin/models/: department.py  doctor.py
app/admin/repository/: department_repo.py  doctor_repo.py
app/admin/schemas/: department_schema.py  doctor_schema.py
app/admin/services/: department_services.py  doctor_services.py
app/appointment/: appointment_routes.py
app/appointment/models/: appointment.py
app/appointment/repository/: appointment_repo.py
app/appointment/schemas/: appointment_schema.py
app/appointment/services/: appointment_service.py
app/auth/: auth_routes.py
app/auth/schemas/: login_schema.py  register_schema.py
app/auth/services/: auth_service.py
app/common/models/: user.py
app/common/repository/: user_repo.py
app/common/schemas/: user_schema.py
app/common/utils/: decorators.py  feature_flags.py  jwt_handler.py  password_hash.py  rbac_decorator.py
app/config/: config.py  db.py
app/doctor/: availablity_routes.py
app/doctor/repository/: availability_repo.py
app/doctor/schema/: availability_schema.py
app/doctor/services/: availablity_service.py
app/doctor_availability/: availablity_routes.py
app/models/: models.py
app/reimbursement/: reimbursement_routes.py
app/repositories/: department_repo.py  doctor_repo.py  repositories.py  user_repo.py
app/services/: admin_service.py  auth_service.py
app/utils/: auth_utils.py  schemas.py
(+8 files in other folders)
